Added information on workshop

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 README
 Author: Christian Lantz
 Date: 2020-06-16
+
+This repository is for the 2020 SSRP data workshop.
+I will be learning data processing in python. 
