Change from git hub

--- a/README
+++ b/README
@@ -4,3 +4,4 @@ Date: 2020-06-16
 
 This repository is for the 2020 SSRP data workshop.
 I will be learning data processing in python. 
+This is a change from github
